third_party/rust/anyhow/tests/ui/empty-ensure.stderr
error: unexpected end of macro invocation
 --> tests/ui/empty-ensure.rs:4:5
  |
4 |     ensure!();
  |     ^^^^^^^^^ missing tokens in macro arguments
  |
  = note: this error originates in the macro `$crate::__parse_ensure` (in Nightly builds, run with -Z macro-backtrace for more info)
